[tool.poetry]
name = "misinformation-graph-detection"
version = "0.1.0"
description = ""
authors = ["GrossBetruger <koriatoren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kagglehub = "^0.3.12"
networkx = "^3.4.2"
pandas = "^2.2.3"
pyvis = "^0.3.2"
black = "^25.1.0"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
